--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "dotenv": "^8.2.0",
     "emailjs": "^3.4.0",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
